-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 25, 26
-
Component/s: hotspot
-
b22
-
x86_64
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8373775 | 25.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
When using stripped and not full pdb files on WIndows, the test CheckForProperDetailStackTrace.java misses source information (but this is no surprise with those much smaller pdb files).
error output is :
java.lang.RuntimeException: Expected source information missing from output
at CheckForProperDetailStackTrace.main(CheckForProperDetailStackTrace.java:145)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
at java.base/java.lang.Thread.run(Thread.java:1474)
Info about /PDBSTRIPPED
https://learn.microsoft.com/en-us/cpp/build/reference/pdbstripped-strip-private-symbols?view=msvc-170
"The stripped PDB file will not contain:
Type information
Line number information
Per-object file CodeView symbols such as those for functions, locals, and static data"
So no line numbers in those stack traces .
error output is :
java.lang.RuntimeException: Expected source information missing from output
at CheckForProperDetailStackTrace.main(CheckForProperDetailStackTrace.java:145)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
at java.base/java.lang.Thread.run(Thread.java:1474)
Info about /PDBSTRIPPED
https://learn.microsoft.com/en-us/cpp/build/reference/pdbstripped-strip-private-symbols?view=msvc-170
"The stripped PDB file will not contain:
Type information
Line number information
Per-object file CodeView symbols such as those for functions, locals, and static data"
So no line numbers in those stack traces .
- backported by
-
JDK-8373775 Test runtime/NMT/CheckForProperDetailStackTrace.java fails on Windows when using stripped pdb files
-
- Resolved
-
- relates to
-
JDK-8351842 Windows specific issues in combination of JEP 493 and --with-external-symbols-in-bundles=public
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/8f2b5a6b
-
Commit(master)
openjdk/jdk/69a9b4ce
-
Review(master)
openjdk/jdk25u-dev/17
-
Review(master)
openjdk/jdk/27899
(1 links to)